fix: update summernote confihuration in settings ot make summernote editor responsive on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,11 +1,5 @@
 /* ---------- Base Styles ---------- */
 
-/* Customize Summernote */
-
-textarea.summernote {
-    display: none; /* Hide the original textarea */
-}
-
 /* Background Colors */
 
 body {
